Moving the buttons out of the main section to between the navigation and main section to avoid long headlines overlapping the buttons

--- a/web/src/stylesheets/pages/page--task-interactions.scss
+++ b/web/src/stylesheets/pages/page--task-interactions.scss
@@ -29,6 +29,10 @@
 			display: inline;
 		}
 
+		.details {
+			display: none; //Remove when HTML updates are pushed to Release
+		}
+
 	}
 
 	strong {
